fix flicker once and for all

--- a/src/app/components/styles/gov-unit/gov-unit-item.less
+++ b/src/app/components/styles/gov-unit/gov-unit-item.less
@@ -10,7 +10,7 @@
 
         .intro {
             margin: 40px 0;
-            > p {
+            > p, ol, ul {
                 color: #f2f2f2;
                 font-weight: 300;
                 font-size: 18px;
